# parsematic

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
parsematic/: __init__.py  __main__.py
tests/: test_main.py
yampy/: __init__.py  __main__.py
