[tool.poetry]
name = "yampy"
version = "1.0.0"
description = "Yet Another Math Parser (Python)"
authors = ["infibrocco <https://github.com/infibrocco>"]
license = "MIT"
readme = "README.md"
keywords = ["math-parser", "math", "parser"]
packages = [{ include = "yampy" }]


[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
