[tool.poetry]
name = "parsematic"
version = "1.0.0"
description = "Parsematic: a basic math parser written in python"
license = "MIT"
authors = []
readme = "README.md"
keywords = ["math-parser", "math", "parser"]
packages = [{ include = "parsematic" }]


[tool.poetry.dependencies]
python = "^3.7"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
